--- a/app/src/main/res/layout/chat_bubble_video.xml
+++ b/app/src/main/res/layout/chat_bubble_video.xml
@@ -54,7 +54,7 @@
 					android:id="@+id/selection_overlay"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:background="?attr/colorPrimaryContainer"
+					android:background="?attr/colorOnSurfaceContainer"
 					android:alpha="0.1"
 					android:visibility="gone" />
 				<LinearLayout
@@ -80,7 +80,7 @@
 					android:layout_marginBottom="4dp"
 					android:layout_marginLeft="8dp"
 					android:textSize="12sp"
-					android:textColor="?attr/colorPrimary"
+					android:textColor="?attr/colorOnSurface"
 					android:textStyle="bold"
 					android:visibility="gone"
 					android:singleLine="true"
