--- a/app/src/main/res/layout/item_setting_header.xml
+++ b/app/src/main/res/layout/item_setting_header.xml
@@ -8,4 +8,4 @@
     android:paddingTop="16dp"
     android:paddingBottom="8dp"
     android:textAppearance="?attr/textAppearanceTitleSmall"
-    android:textColor="?attr/colorPrimary" />
+    android:textColor="?attr/colorOnSurface" />
