--- a/app/src/main/res/layout/activity_chatsettings.xml
+++ b/app/src/main/res/layout/activity_chatsettings.xml
@@ -128,7 +128,7 @@
 					android:value="12"
 					android:valueFrom="16"
 					android:valueTo="30"
-					app:thumbColor="@color/colorPrimary"
+					app:thumbColor="?attr/colorOnSurface"
 					app:thumbElevation="2dp"
 					app:thumbRadius="16dp"
 					app:trackHeight="16dp"
@@ -433,7 +433,7 @@
 					android:value="16"
 					android:valueFrom="5"
 					android:valueTo="45"
-					app:thumbColor="@color/colorPrimary"
+					app:thumbColor="?attr/colorOnSurface"
 					app:thumbElevation="2dp"
 					app:thumbRadius="16dp"
 					app:trackHeight="16dp"
