--- a/app/src/main/res/layout/activity_create_line_video.xml
+++ b/app/src/main/res/layout/activity_create_line_video.xml
@@ -49,7 +49,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginRight="8dp"
 			android:text="@string/continue_button"
-			android:textColor="?attr/colorPrimary"
+			android:textColor="?attr/colorOnSurface"
 			tools:replace="android:text"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
