--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -170,7 +170,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"
-                    app:indicatorColor="?attr/colorPrimary" />
+                    app:indicatorColor="?attr/colorOnSurface" />
 
                 <TextView
                     android:layout_width="wrap_content"
