--- a/app/src/main/res/layout/chat_bubble_voice.xml
+++ b/app/src/main/res/layout/chat_bubble_voice.xml
@@ -49,7 +49,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginBottom="4dp"
 				android:textSize="12sp"
-				android:textColor="?attr/colorPrimary"
+				android:textColor="?attr/colorOnSurface"
 				android:textStyle="bold"
 				android:visibility="gone"
 				android:singleLine="true"
