--- a/app/src/main/res/layout/chat_msg_cv_synapse.xml
+++ b/app/src/main/res/layout/chat_msg_cv_synapse.xml
@@ -43,7 +43,7 @@
 				android:layout_marginLeft="16dp"
 				android:layout_marginRight="16dp"
 				android:text="Sender Name"
-				android:textColor="?attr/colorPrimary"
+				android:textColor="?attr/colorOnSurface"
 				android:textStyle="bold"
 				android:visibility="gone" />
 			<LinearLayout
