--- a/app/src/main/res/layout/inbox_msg_list_cv_synapse.xml
+++ b/app/src/main/res/layout/inbox_msg_list_cv_synapse.xml
@@ -62,7 +62,7 @@
 								android:layout_width="12dp"
 								android:layout_height="12dp"
 								android:padding="8dp"
-								android:background="?attr/colorPrimary"
+								?attr/colorOnSurface
 								android:orientation="vertical" />
 						</LinearLayout>
 					</LinearLayout>
@@ -163,11 +163,11 @@
 							android:paddingTop="2dp"
 							android:paddingRight="7dp"
 							android:paddingBottom="2dp"
-							android:background="?attr/colorPrimaryContainer"
+							android:background="?attr/colorOnSurface"
 							android:gravity="center_horizontal|center_vertical"
 							android:text="0"
 							android:textSize="16sp"
-							android:textColor="?attr/colorOnPrimaryContainer" />
+							android:textColor="?attr/colorSurface" />
 					</LinearLayout>
 				</LinearLayout>
 			</LinearLayout>
