--- a/app/src/main/res/layout/item_inbox_message.xml
+++ b/app/src/main/res/layout/item_inbox_message.xml
@@ -135,11 +135,11 @@
 		android:paddingTop="2dp"
 		android:paddingRight="7dp"
 		android:paddingBottom="2dp"
-		android:background="?attr/colorPrimaryContainer"
+		android:background="?attr/colorOnSurface"
 		android:gravity="center_horizontal|center_vertical"
 		android:text="0"
 		android:textSize="16sp"
-		android:textColor="?attr/colorOnPrimaryContainer"
+		android:textColor="?attr/colorSurface"
 		android:layout_alignParentRight="true"
 		android:layout_alignTop="@id/last_message"
 		android:layout_alignBottom="@id/last_message"/>
