--- a/app/src/main/res/layout/item_media_video.xml
+++ b/app/src/main/res/layout/item_media_video.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminateTint="?attr/colorPrimary"
+        android:indeterminateTint="?attr/colorOnSurface"
         android:visibility="gone" />
 
 </FrameLayout>
