--- a/app/src/main/res/layout/item_search_user.xml
+++ b/app/src/main/res/layout/item_search_user.xml
@@ -55,7 +55,7 @@
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="2dp"
                 android:background="@drawable/shape_circle"
-                android:backgroundTint="?attr/colorPrimary"
+                android:backgroundTint="?attr/colorOnSurface"
                 android:visibility="gone" />
 
         </FrameLayout>
