--- a/app/src/main/res/layout/item_setting_preview.xml
+++ b/app/src/main/res/layout/item_setting_preview.xml
@@ -77,7 +77,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="8dp"
                         android:padding="8dp"
-                        android:background="?attr/colorPrimary"
+                        android:background="?attr/colorOnSurface"
                         android:orientation="vertical" />
 
                     <LinearLayout
@@ -92,7 +92,7 @@
                             android:layout_height="wrap_content"
                             android:text="Nihad Jim"
                             android:textSize="12sp"
-                            android:textColor="?attr/colorPrimary"
+                            android:textColor="?attr/colorOnSurface"
                             android:singleLine="true" />
 
                         <TextView
@@ -177,7 +177,7 @@
                 android:paddingTop="10dp"
                 android:paddingRight="12dp"
                 android:paddingBottom="10dp"
-                android:background="?attr/colorPrimary"
+                android:background="?attr/colorOnSurface"
                 android:orientation="vertical">
 
                 <TextView
@@ -186,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:text="Feeling excited!"
                     android:textSize="16sp"
-                    android:textColor="?attr/colorOnPrimary"
+                    android:textColor="?attr/colorOnSurface"
                     android:autoLink="all" />
             </LinearLayout>
 
